force-app/main/default/objects/Opportunity/fields/WhatDoesTheCustomerDo__c.field-meta.xml
<CustomField>
    <fullName>WhatDoesTheCustomerDo__c</fullName>
    <label>What does the customer do?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>