force-app/main/default/objects/Opportunity/fields/WorkshopDate__c.field-meta.xml
<CustomField>
    <fullName>WorkshopDate__c</fullName>
    <label>Workshop Date</label>
    <type>Date</type>
</CustomField>