force-app/main/default/objects/Opportunity/fields/WorkshopTimePick__c.field-meta.xml
<CustomField>
    <fullName>WorkshopTimePick__c</fullName>
    <description>When should be the workshop date?</description>
    <inlineHelpText>When should be the workshop/demo/health Check date scheduled? Please check Website Source Details for the specific type.</inlineHelpText>
    <label>Preferred Workshop/Demo/HealthCheck Time</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>asap</fullName>
                <label>As soon as possible</label>
            </value>
            <value>
                <fullName>2 weeks</fullName>
            </value>
            <value>
                <fullName>3 weeks</fullName>
            </value>
            <value>
                <fullName>4 weeks</fullName>
            </value>
            <value>
                <fullName>after 4 weeks</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>