force-app/main/default/objects/Opportunity/recordTypes/Change_Request.recordType-meta.xml
<RecordType>
    <fullName>Change_Request</fullName>
    <active>false</active>
    <businessProcess>Support</businessProcess>
    <description>Change Requests on Existing Projects.</description>
    <label>3 Change Request</label>
</RecordType>