force-app/main/default/objects/Opportunity/recordTypes/Maintenance.recordType-meta.xml
<RecordType>
    <fullName>Maintenance</fullName>
    <active>true</active>
    <businessProcess>Support</businessProcess>
    <description>Managed Services, Service Blocks and T&amp;M Support.</description>
    <label>2 Support</label>
</RecordType>