force-app/main/default/objects/Opportunity/recordTypes/Project.recordType-meta.xml
<RecordType>
    <fullName>Project</fullName>
    <active>true</active>
    <businessProcess>Project</businessProcess>
    <description>Fixed-Price and Time &amp; Materials Projects.</description>
    <label>1 Project</label>
</RecordType>