force-app/main/default/objects/Opportunity/recordTypes/Workshop.recordType-meta.xml
<RecordType>
    <fullName>Workshop</fullName>
    <active>false</active>
    <businessProcess>Workshop</businessProcess>
    <description>Paid Workshops</description>
    <label>4 Workshop</label>
</RecordType>