force-app/main/default/objects/Opportunity/validationRules/VR05_OnlyOneOppItemForManagedServices.validationRule-meta.xml
<ValidationRule>
    <fullName>VR05_OnlyOneOppItemForManagedServices</fullName>
    <active>true</active>
    <description>If you are selling a Maintenance/Managed Services, please make sure that only One Opportunity Item is on the Opportunity [VR05].</description>
    <errorConditionFormula>$User.IsBypassVR__c = FALSE &amp;&amp;
CountOpportunityProductsAuto__c != 1 &amp;&amp;
ISPICKVAL(ProjectType__c , 'Maintenance') &amp;&amp;
ISPICKVAL(StageName, 'Closed Won') &amp;&amp;
ISCHANGED(StageName)</errorConditionFormula>
    <errorMessage>If you are selling a Maintenance/Managed Services, please make sure that only One Opportunity Item is on the Opportunity [VR05].</errorMessage>
</ValidationRule>