force-app/main/default/objects/Opportunity/validationRules/VR09_SalesforceAELeadSourceSalesforce.validationRule-meta.xml
<ValidationRule>
    <fullName>VR09_SalesforceAELeadSourceSalesforce</fullName>
    <active>true</active>
    <description>Salesforce AE must be filled in if Salesforce is selected as the lead source</description>
    <errorConditionFormula>$User.IsBypassVR__c = false &amp;&amp;
ISPICKVAL(LeadSource, "Salesforce") &amp;&amp; 
ISBLANK(Salesforce_AE__c) &amp;&amp;
ISCHANGED(LeadSource)</errorConditionFormula>
    <errorDisplayField>Salesforce_AE__c</errorDisplayField>
    <errorMessage>Please ensure a Salesforce AE is selected [VR09].</errorMessage>
</ValidationRule>