force-app/main/default/objects/Opportunity/validationRules/VR14_OpportunityCannotBeWonOnCreation.validationRule-meta.xml
<ValidationRule>
    <fullName>VR14_OpportunityCannotBeWonOnCreation</fullName>
    <active>true</active>
    <description>Avoid opportunities being created as won.</description>
    <errorConditionFormula>ISNEW() &amp;&amp; ISPICKVAL(StageName,"Closed Won") &amp;&amp;  $User.IsBypassVR__c =FALSE</errorConditionFormula>
    <errorMessage>Opportunities can't be created as "Won". Please fill in all the relevant information and then close it won. [VR14]</errorMessage>
</ValidationRule>