force-app/main/default/objects/Opportunity/validationRules/VR16_CloudRequiredOnClosedWon.validationRule-meta.xml
<ValidationRule>
    <fullName>VR16_CloudRequiredOnClosedWon</fullName>
    <active>true</active>
    <description>Salesforce cloud is required on closed won</description>
    <errorConditionFormula>$User.IsBypassVR__c = False &amp;&amp;
ISBLANK(SalesforceClouds__c) &amp;&amp;
ISCHANGED(StageName) &amp;&amp;
ISPICKVAL(StageName, 'Closed Won')</errorConditionFormula>
    <errorDisplayField>SalesforceClouds__c</errorDisplayField>
    <errorMessage>Please provide the Salesforce Cloud(s) on Closed Won. [VR16]</errorMessage>
</ValidationRule>