force-app/main/default/objects/Opportunity/validationRules/VR21_WorkshopDateRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR21_WorkshopDateRequired</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
$User.IsBypassVR__c = false, 
ISBLANK( WorkshopDate__c ), 
ISCHANGED(StageName), 
RecordType.Name = 'Project', 
OR( 
ISPICKVAL( StageName , '2 - Workshop Closed'), 
ISPICKVAL( StageName , '3 - Cost Analysis'), 
ISPICKVAL( StageName , '4 - Proposal/Price Quote'), 
ISPICKVAL( StageName , '5 - Negotiation/Review'), 
ISPICKVAL( StageName , 'Closed Won') 
) 
)</errorConditionFormula>
    <errorDisplayField>WorkshopDate__c</errorDisplayField>
    <errorMessage>Please fill in a Workshop Date when you change the stage to "2 - Workshop Closed" or beyond. [VR21]</errorMessage>
</ValidationRule>