force-app/main/default/objects/Opportunity/validationRules/VR22_CircleRequired.validationRule-meta.xml
<ValidationRule>
    <fullName>VR22_CircleRequired</fullName>
    <active>true</active>
    <description>when reaching a specific stage the circle field must be filled out with the squad who is taking over the project.</description>
    <errorConditionFormula>AND( 
$User.IsBypassVR__c = false, 
ISBLANK(CircleRef__c), 
ISCHANGED(StageName), 
OR(
ISPICKVAL( StageName , '5 - Negotiation/Review'),
ISPICKVAL( StageName , 'Closed Won')
)
)</errorConditionFormula>
    <errorDisplayField>CircleRef__c</errorDisplayField>
    <errorMessage>Please chose a specific circle/squad when you change the stage to "5 - Negotiation/Review" or beyond. [VR22]</errorMessage>
</ValidationRule>