force-app/main/default/objects/Opportunity/validationRules/VR26_ProjectStartDateNotBeforeCloseDate.validationRule-meta.xml
<ValidationRule>
    <fullName>VR26_ProjectStartDateNotBeforeCloseDate</fullName>
    <active>true</active>
    <description>Project Start Date cannot be before the close date of the opportunity.</description>
    <errorConditionFormula>AND(CloseDate &gt; ProjectStartDateTrig__c,
 $User.IsBypassVR__c = FALSE,
  NOT(ISPICKVAL(StageName, "Closed Lost") ),
  NOT(ISPICKVAL(StageName, "Closed Won") )
)</errorConditionFormula>
    <errorMessage>Project Start Date cannot be before the close date of the opportunity [VR26]</errorMessage>
</ValidationRule>