force-app/main/default/objects/Opportunity/validationRules/VR27_SupportBlock.validationRule-meta.xml
<ValidationRule>
    <fullName>VR27_SupportBlock</fullName>
    <active>true</active>
    <description>For Support Blocks, you can only insert 1 Upfront Milestone [VR27].</description>
    <errorConditionFormula>$User.IsBypassVR__c = FALSE
&amp;&amp;
CountMilestonesAuto__c &gt; 1
&amp;&amp;
ISPICKVAL(ProjectType__c ,'Service Block')</errorConditionFormula>
    <errorMessage>For Support Blocks, you can only insert 1 Upfront Milestone [VR27].</errorMessage>
</ValidationRule>