force-app/main/default/objects/Opportunity/validationRules/VR28_CloseDateCannotBeInPast.validationRule-meta.xml
<ValidationRule>
    <fullName>VR28_CloseDateCannotBeInPast</fullName>
    <active>true</active>
    <description>Close Date cannot be in past, if stage is not closed.</description>
    <errorConditionFormula>AND(
!$User.IsBypassVR__c,
IsClosed = FALSE,
CloseDate &lt; TODAY(),
OR(
 ISCHANGED(IsClosed), 
 ISCHANGED(StageName))
)</errorConditionFormula>
    <errorMessage>Close Date cannot be in past, if stage is not closed. [VR28]</errorMessage>
</ValidationRule>