force-app/main/default/objects/Opportunity/validationRules/VR31_AmountCantBeChanged.validationRule-meta.xml
<ValidationRule>
    <fullName>VR31_AmountCantBeChanged</fullName>
    <active>true</active>
    <description>The amount on a closed won opportunity cannot be changed except from the change request flow.  // JC Updated to include isWon (causing Validation Errors on Test Classes)</description>
    <errorConditionFormula>AND(
$User.IsBypassVR__c = FALSE,
IsWon = true,
IsAdjustedByChangeRequest__c = FALSE,
ISCHANGED(Amount)
)</errorConditionFormula>
    <errorMessage>The amount of a closed won opportunity cannot be changed.[VR31]</errorMessage>
</ValidationRule>