force-app/main/default/objects/Opportunity/listViews/All_Current_Opps_in_Final_Stage.listView-meta.xml
<ListView>
    <fullName>All_Current_Opps_in_Final_Stage</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <columns>PlannedHours__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>4 - Proposal/Price Quote,5 - Negotiation/Review</value>
    </filters>
    <filters>
        <field>OPPORTUNITY.TYPE</field>
        <operation>equals</operation>
        <value>New Business</value>
    </filters>
    <label>All Current Opps in Final Stage</label>
</ListView>