force-app/main/default/objects/Opportunity/listViews/ALL_UK_Open_Opps.listView-meta.xml
<ListView>
    <fullName>ALL_UK_Open_Opps</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.FULL_NAME</columns>
    <columns>Salesforce_AE__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>1 - Discovery,2 - Workshop Closed,3 - Cost Analysis,4 - Proposal/Price Quote,5 - Negotiation/Review</value>
    </filters>
    <filters>
        <field>DeliveringEntityRef__c</field>
        <operation>equals</operation>
        <value>EMPAUA Ltd</value>
    </filters>
    <label>ALL UK Open Opps</label>
</ListView>