force-app/main/default/objects/Opportunity/listViews/Lost_Opportunities.listView-meta.xml
<ListView>
    <fullName>Lost_Opportunities</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>HourlyRate__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>WorkshopDate__c</columns>
    <columns>LostReason__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>Closed Lost</value>
    </filters>
    <label>Lost Opportunities</label>
    <language>en_US</language>
</ListView>