force-app/main/default/objects/Opportunity/listViews/My_open_Opportunities1.listView-meta.xml
<ListView>
    <fullName>My_open_Opportunities1</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>EstimatedAmount__c</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OpportunityNumberAuto__c</columns>
    <columns>OPPORTUNITY.NEXT_STEP</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <columns>ProjectType__c</columns>
    <columns>ResourcingStatusPick__c</columns>
    <filterScope>Mine</filterScope>
    <filters>
        <field>OPPORTUNITY.CLOSED</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>My Open Opportunities</label>
</ListView>