force-app/main/default/objects/Opportunity/listViews/Open_Opportunities_Andy.listView-meta.xml
<ListView>
    <fullName>Open_Opportunities_Andy</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY_SCORE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.FULL_NAME</field>
        <operation>equals</operation>
        <value>Jamie Savage</value>
    </filters>
    <label>Open Opportunities Jamie</label>
</ListView>