force-app/main/default/objects/Opportunity/listViews/Opportunity_Pipeline_quote_DACH.listView-meta.xml
<ListView>
    <fullName>Opportunity_Pipeline_quote_DACH</fullName>
    <columns>OPPORTUNITY.NAME</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>OPPORTUNITY.AMOUNT</columns>
    <columns>OPPORTUNITY.CLOSE_DATE</columns>
    <columns>OPPORTUNITY.STAGE_NAME</columns>
    <columns>WorkshopDate__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>OPPORTUNITY.CREATED_DATE</columns>
    <columns>OPPORTUNITY.LAST_ACTIVITY</columns>
    <columns>OPPORTUNITY.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>OPPORTUNITY.STAGE_NAME</field>
        <operation>equals</operation>
        <value>,1 - Discovery,2 - Workshop Closed,3 - Cost Analysis,4 - Proposal/Price Quote</value>
    </filters>
    <label>Pipeline</label>
    <language>en_US</language>
</ListView>